[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rand = "0.8.4"
thread_pool = { path = "./thread_pool" }

# cargo watch -x run
# cargo watch -x 'run -- server'
